--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vue": "^4.0.8",
     "astro": "^4.2.7",
+    "firebase": "^10.11.0",
+    "firebase-admin": "^12.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vue": "^3.4.15"
